# ptrace-approve

./: .gitignore  README.md  pyproject.toml  release  test  test_background.py  test_match.py
ptrace_approve/: clip.py  main.py  match.py  pipx.py
