[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "ptrace-approve"
version = "1.0.0"
description = "Intercept and approve filesystem-modifying syscalls"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "python-ptrace>=0.9.9",]

[project.license]
text = "MIT"

[project.scripts]
ptrace-approve = "ptrace_approve.main:main"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "ptrace_approve*",]
